Prevent logo from causing a horizontal scrollbar at smaller viewport widths.
This was especially noticeable with non-default font-sizes. The wrapper div and additional pre are required due to using the font-size provided by the browser (using em throughout).

--- a/doc/docs.css
+++ b/doc/docs.css
@@ -39,17 +39,28 @@ pre.code {
 }
 
 .grey {
-  font-size: 2.2em;
-  padding: .5em 1em;
-  line-height: 1.2em;
-  margin-top: .5em;
+  background-color: #eee;
+  border-radius: 6px;
+  margin-bottom: 1.65em;
+  margin-top: 0.825em;
+  padding: 0.825em 1.65em;
   position: relative;
 }
 
 img.logo {
   position: absolute;
-  right: -25px;
+  right: -1em;
   bottom: 4px;
+  max-width: 23.6875em; /* Scale image down with text to prevent clipping */
+}
+
+.grey > pre {
+  background:none;
+  border-radius:0;
+  padding:0;
+  margin:0;
+  font-size:2.2em;
+  line-height:1.2em;
 }
 
 a:link, a:visited, .quasilink {
